<resources>
    <string name="app_name">COMP1786_SU25</string>
    <string name="title_activity_intro_screen">IntroScreen</string>
    <string name="login">LogIn</string>
    <string name="admin_app">Admin App</string>
    <string name="log_in">Log In</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="textview_label">TextView</string>
    <string name="remember_me">Remember Me</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have an account?</string>
</resources>